# pinta

./: .gitignore  Makefile.am  README.md  configure.ac
src/: Makefile.am  clock.c  clock.cpp  color.cpp  cutil.h  display.cpp  display.h  displayerror.cpp  displayerror.h  drm.c  egl.c  floatanimation.cpp  floatcolor.cpp  floatcolor.h  gbm.c  gl.c  globals.h  list.c  matrix.cpp  mesh.cpp  mesh.h  meshfactory.cpp  meshfactory.h  model.c  pinta.c  pinta.h  renderedmesh.cpp  renderer.cpp  renderererror.cpp  scene.cpp  scene.h  transformations.cpp  transformations.h  vector2.cpp  vertex.cpp  x.c
src/pinta/: clock.h  color.h  floatanimation.h  matrix.h  mesh.h  meshfactory.h  renderedmesh.h  renderer.h  renderererror.h  scene.h  transformations.h  vector2.h  vertex.h
test/: Makefile.am  test1.c
