
lib_LTLIBRARIES = libpinta.la
libpinta_la_SOURCES = clock.cpp clock.h color.cpp color.h display.cpp display.h displayerror.cpp displayerror.h floatcolor.cpp floatcolor.h matrix.cpp matrix.h mesh.cpp mesh.h meshfactory.cpp meshfactory.h renderedmesh.cpp renderedmesh.h renderer.cpp renderer.h renderererror.cpp renderererror.h scene.cpp scene.h transformations.cpp transformations.h vertex.cpp vertex.h
libpinta_la_CXXFLAGS = $(sdl2_CXXLAGS) $(glesv2_CXXLAGS)
libpinta_la_LIBADD = $(sdl2_LIBS) $(glesv2_LIBS)

